// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CampaignTemplates get template configuration 1`] = `
{
  "message_html": "<div><strong>Great choice!</strong> 🛒</div><div><br></div><div>Can we <strong>help you</strong> with anything else before checkout?</div>",
  "message_text": "Great choice! 🛒

Can we help you with anything else before checkout?",
  "name": "Engage with customers on the cart page",
  "status": "inactive",
  "template_id": "connect-customer-on-cart-with-team",
  "trigger_rule": "{ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id}",
  "triggers": [
    {
      "id": "ulid-generated-id",
      "operator": "contains",
      "type": "current_url",
      "value": "/cart",
    },
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "time_spent_on_page",
      "value": 8,
    },
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "business_hours",
      "value": "during",
    },
  ],
}
`;

exports[`CampaignTemplates get template configuration 2`] = `
{
  "defaultStepOpened": "message",
}
`;

exports[`CampaignTemplates get template configuration 3`] = `
{
  "attachments": [],
  "message_html": "<div><strong>Great choice!</strong> One of our favorites to go with: Complimentary product</div>",
  "message_text": "Great choice! One of our favorites to go with: Complimentary product",
  "meta": {
    "delay": 5000,
  },
  "name": "[Increase AOV] Cross Sell complimentary item",
  "status": "inactive",
  "template_id": "csm-cross-sell-complimentary-item",
  "trigger_rule": "{ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id}",
  "triggers": [
    {
      "id": "ulid-generated-id",
      "operator": "notContains",
      "type": "product_tags",
      "value": "complimentary product",
    },
    {
      "id": "ulid-generated-id",
      "operator": "containsAll",
      "type": "product_tags",
      "value": "product",
    },
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "business_hours",
      "value": "anytime",
    },
    {
      "id": "ulid-generated-id",
      "operator": "contains",
      "type": "current_url",
      "value": "/",
    },
  ],
}
`;

exports[`CampaignTemplates get template configuration 4`] = `
{
  "attachments": [],
  "message_html": "<div>Welcome back! <strong>Don&#x27;t forget you can save up to 15%</strong> on your orders by becoming a <a href="http://test.com/?utm_source=Gorgias&utm_medium=ChatCampaign&utm_campaign=%5BTarget%20Return%20Customers%5D-%20Drive%20Loyalty%20program%20signups?utm_source=Gorgias&utm_medium=ChatCampaign&utm_campaign=%5BTarget%20Return%20Customers%5D-%20Drive%20Loyalty%20program%20signups" target="_blank">loyalty member</a>. </div><div><br></div><div>Already a member? <a href="http://test.com/" target="_blank">Sign in</a></div>",
  "message_text": "Welcome back! Don't forget you can save up to 15% on your orders by becoming a loyalty member. 

Already a member? Sign in",
  "meta": {
    "delay": 5000,
  },
  "name": "[Target Return Customers] Drive Loyalty program signups",
  "status": "inactive",
  "template_id": "csm-drive-loyalty-program-signups",
  "trigger_rule": "{ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id}",
  "triggers": [
    {
      "id": "ulid-generated-id",
      "operator": "notContains",
      "type": "customer_tags",
      "value": "vip",
    },
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "incognito_visitor",
      "value": "false",
    },
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "amount_spent",
      "value": "0",
    },
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "business_hours",
      "value": "anytime",
    },
    {
      "id": "ulid-generated-id",
      "operator": "contains",
      "type": "current_url",
      "value": "/",
    },
  ],
}
`;

exports[`CampaignTemplates get template configuration 5`] = `
{
  "attachments": [],
  "message_html": "<div>Use product cards to highlight the specific products highlighted in or relevant to the blog post. </div><div><br></div><div>Time spent is intentionally high to target folks who have a higher interest in the topic.</div>",
  "message_text": "Use product cards to highlight the specific products highlighted in or relevant to the blog post. 

Time spent is intentionally high to target folks who have a higher interest in the topic.",
  "name": "[Increase Conversion][Blog content] Highlight products featured in blog",
  "status": "inactive",
  "template_id": "csm-highlight-products-featured-in-blog",
  "trigger_rule": "{ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id}",
  "triggers": [
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "time_spent_on_page",
      "value": 42,
    },
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "business_hours",
      "value": "anytime",
    },
    {
      "id": "ulid-generated-id",
      "operator": "contains",
      "type": "current_url",
      "value": [
        "/blog",
      ],
    },
  ],
}
`;

exports[`CampaignTemplates get template configuration 6`] = `
{
  "attachments": [],
  "message_html": "<div><a href="http://collection.com/?utm_source=Gorgias&utm_medium=ChatCampaign&utm_campaign=%5BIncrease%20Conversion%5D%20Personalized%20experience%20by%20triggering%20with%20UTMs" target="_blank">Here&#x27;s the collection</a> you just saw on Instagram.</div><div><br></div><div>You can get a special $15 off any product in the range </div>",
  "message_text": "Here's the collection you just saw on Instagram.

You can get a special $15 off any product in the range ",
  "name": "[Increase Conversion] Personalized experience by triggering with UTMs",
  "status": "inactive",
  "template_id": "csm-personalized-experience-by-triggering-with-utms",
  "trigger_rule": "{ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id}",
  "triggers": [
    {
      "id": "ulid-generated-id",
      "operator": "lt",
      "type": "visit_count",
      "value": 2,
    },
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "time_spent_on_page",
      "value": 11,
    },
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "business_hours",
      "value": "anytime",
    },
    {
      "id": "ulid-generated-id",
      "operator": "contains",
      "type": "current_url",
      "value": [
        "/UTM_from_social_ad",
      ],
    },
  ],
}
`;

exports[`CampaignTemplates get template configuration 7`] = `
{
  "attachments": [],
  "message_html": "<div><strong>Want to be the first to get your hands on the drop? </strong></div><div><br></div><div>Comment &quot;Me first&quot; below and we&#x27;ll send you an early access code a week before the launch.</div><div><br></div><div>link to rules for subsequent automation:</div><div><a href="https://automationnation.gorgias.com/app/settings/rules/104113?utm_source=Gorgias&utm_medium=ChatCampaign&utm_campaign=%5BCapture%20and%20manage%20leads%5D-%20Presale%20landing%20page" target="_blank">1. Capture Lead</a></div><div><a href="https://automationnation.gorgias.com/app/settings/rules/104183?utm_source=Gorgias&utm_medium=ChatCampaign&utm_campaign=%5BCapture%20and%20manage%20leads%5D-%20Presale%20landing%20page" target="_blank">2. Automate Followup</a></div>",
  "message_text": "Want to be the first to get your hands on the drop? 

Comment "Me first" below and we'll send you an early access code a week before the launch.

link to rules for subsequent automation:
1. Capture Lead
2. Automate Followup",
  "meta": {
    "delay": 0,
  },
  "name": "[Capture and manage leads] Presale landing page",
  "status": "inactive",
  "template_id": "csm-presale-landing-page",
  "trigger_rule": "{ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id}",
  "triggers": [
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "business_hours",
      "value": "anytime",
    },
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "time_spent_on_page",
      "value": 15,
    },
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "visit_count",
      "value": 2,
    },
    {
      "id": "ulid-generated-id",
      "operator": "contains",
      "type": "current_url",
      "value": [
        "/presale",
      ],
    },
  ],
}
`;

exports[`CampaignTemplates get template configuration 8`] = `
{
  "attachments": [],
  "message_html": "<div>Hope you&#x27;re loving the Model x surfboard!</div><div><br></div><div>We just launced a <strong>new set of fins</strong> that team USA is using in their model x at the Olympics. </div><div><br></div><div>Since you missed out on the bundle to save option, use code SECOND CHANCE for 5% off today.</div><div><br></div>",
  "message_text": "Hope you're loving the Model x surfboard!

We just launced a new set of fins that team USA is using in their model x at the Olympics. 

Since you missed out on the bundle to save option, use code SECOND CHANCE for 5% off today.
",
  "name": "[Target Return Customers] Suggest Complimentary product to previous purchase",
  "status": "inactive",
  "template_id": "csm-suggest-complimentary-product-to-previous-purchase",
  "trigger_rule": "{ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id}",
  "triggers": [
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "incognito_visitor",
      "value": "false",
    },
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "session_time",
      "value": 10,
    },
    {
      "id": "ulid-generated-id",
      "operator": "contains",
      "type": "current_url",
      "value": [
        "/collections",
      ],
    },
    {
      "id": "ulid-generated-id",
      "operator": "notContains",
      "type": "ordered_products",
      "value": [],
    },
    {
      "id": "ulid-generated-id",
      "operator": "contains",
      "type": "current_url",
      "value": [
        "/",
      ],
    },
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "business_hours",
      "value": "anytime",
    },
    {
      "id": "ulid-generated-id",
      "operator": "containsAny",
      "type": "ordered_products",
      "value": [],
    },
  ],
}
`;

exports[`CampaignTemplates get template configuration 9`] = `
{
  "attachments": [],
  "message_html": "<div>Unsure on [insert return reason here- i.e. sizing mismatch]? </div><div><br></div><div>Our team has you convered! reach out and chat below:</div>",
  "message_text": "Unsure on [insert return reason here- i.e. sizing mismatch]? 

Our team has you convered! reach out and chat below:",
  "name": "[Prevent Returns] Target known return reasons on product (cart triggered) during business hours",
  "status": "inactive",
  "template_id": "csm-target-known-return-reasons-on-product-cart-triggered-during-business-hours",
  "trigger_rule": "{ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id}",
  "triggers": [
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "visit_count",
      "value": 2,
    },
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "business_hours",
      "value": "outside",
    },
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "time_spent_on_page",
      "value": 10,
    },
    {
      "id": "ulid-generated-id",
      "operator": "containsAll",
      "type": "product_tags",
      "value": "specificproduct",
    },
  ],
}
`;

exports[`CampaignTemplates get template configuration 10`] = `
{
  "attachments": [],
  "message_html": "<div>Unsure on [insert return reason here- i.e. sizing mismatch]? </div><div><br></div><div>Check out our [insert educational content here]</div>",
  "message_text": "Unsure on [insert return reason here- i.e. sizing mismatch]? 

Check out our [insert educational content here]",
  "name": "[Prevent Returns] Target known return reasons on product (cart triggered) outside business hours",
  "status": "inactive",
  "template_id": "csm-target-known-return-reasons-on-product-cart-triggered-outside-business-hours",
  "trigger_rule": "{ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id}",
  "triggers": [
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "visit_count",
      "value": 2,
    },
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "time_spent_on_page",
      "value": 10,
    },
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "business_hours",
      "value": "outside",
    },
    {
      "id": "ulid-generated-id",
      "operator": "containsAll",
      "type": "product_tags",
      "value": "specificproduct",
    },
  ],
}
`;

exports[`CampaignTemplates get template configuration 11`] = `
{
  "attachments": [],
  "message_html": "<div>Unsure on [insert return reason here- i.e. sizing mismatch]? </div><div><br></div><div>Our team has you convered! reach out and chat below:</div>",
  "message_text": "Unsure on [insert return reason here- i.e. sizing mismatch]? 

Our team has you convered! reach out and chat below:",
  "name": "[Prevent Returns] Target known return reasons on product (PDP triggered) during business hours",
  "status": "inactive",
  "template_id": "csm-target-known-return-reasons-on-product-during-business-hours",
  "trigger_rule": "{ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id}",
  "triggers": [
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "visit_count",
      "value": 2,
    },
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "business_hours",
      "value": "outside",
    },
    {
      "id": "ulid-generated-id",
      "operator": "contains",
      "type": "current_url",
      "value": [
        "/specificproduct",
      ],
    },
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "time_spent_on_page",
      "value": 10,
    },
  ],
}
`;

exports[`CampaignTemplates get template configuration 12`] = `
{
  "attachments": [],
  "message_html": "<div>Unsure on [insert return reason here- i.e. sizing mismatch]? </div><div><br></div><div>Check out our [insert educational content here]</div>",
  "message_text": "Unsure on [insert return reason here- i.e. sizing mismatch]? 

Check out our [insert educational content here]",
  "name": "[Prevent Returns] Target known return reasons on product (PDP triggered) outside of business hours",
  "status": "inactive",
  "template_id": "csm-target-known-return-reasons-on-product-outside-business-hours",
  "trigger_rule": "{ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id}",
  "triggers": [
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "business_hours",
      "value": "outside",
    },
    {
      "id": "ulid-generated-id",
      "operator": "contains",
      "type": "current_url",
      "value": [
        "/specificproduct",
      ],
    },
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "time_spent_on_page",
      "value": 10,
    },
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "visit_count",
      "value": 2,
    },
  ],
}
`;

exports[`CampaignTemplates get template configuration 13`] = `
{
  "message_html": "<div>Hold on! Get <strong>10% off your first order</strong> with code <strong><a data-discount-code="LUCKYGC10" href="https://shopify.myshopify.com/discount/LUCKYGC10" target="_blank" rel="noreferrer">LUCKYGC10</a> </strong>😉</div>",
  "message_text": "Hold on! Get 10% off your first order with code LUCKYGC10 😉",
  "meta": {
    "noReply": true,
  },
  "name": "Give 10% off for new visitors about to leave",
  "status": "inactive",
  "template_id": "discount-new-visitors",
  "trigger_rule": "{ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id}",
  "triggers": [
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "business_hours",
      "value": "anytime",
    },
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "session_time",
      "value": 20,
    },
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "exit_intent",
      "value": "true",
    },
    {
      "id": "ulid-generated-id",
      "operator": "lt",
      "type": "visit_count",
      "value": 3,
    },
  ],
}
`;

exports[`CampaignTemplates get template configuration 14`] = `
{
  "defaultStepOpened": "message",
  "toolbarConfiguration": {
    "DISCOUNTCODE": {
      "tooltipContent": "Select your own Shopify discount code",
    },
  },
}
`;

exports[`CampaignTemplates get template configuration 15`] = `
{
  "attachments": [
    {
      "contentType": "application/productCard",
      "extra": {
        "compare_at_price": 14.99,
        "currency": "EUR",
        "price": 9.99,
        "product_id": 1,
        "product_link": "https://shopify.myshopify.com/products/",
      },
      "name": "Product 1",
      "size": 0,
      "url": "src",
    },
  ],
  "message_html": "<div><strong>🚚 FREE SHIPPING for orders $100+</strong></div><div><br></div><div>You&#x27;re almost there! Add our accessories<strong> for only $25</strong>!</div>",
  "message_text": "🚚 FREE SHIPPING for orders $100+

You're almost there! Add our accessories for only $25!",
  "meta": {
    "delay": 15000,
    "noReply": true,
  },
  "name": "Highlight free shipping benefit for customers near the threshold",
  "status": "inactive",
  "template_id": "free-shipping-benefits-for-customers-near-threshold",
  "trigger_rule": "{ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id}",
  "triggers": [
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "cart_value",
      "value": 50,
    },
    {
      "id": "ulid-generated-id",
      "operator": "lt",
      "type": "cart_value",
      "value": 100,
    },
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "business_hours",
      "value": "anytime",
    },
  ],
}
`;

exports[`CampaignTemplates get template configuration 16`] = `
{
  "defaultStepOpened": "audience",
  "stepConfiguration": {
    "audience": {
      "banner": {
        "content": "You can <strong>update the cart values of Amount Added To Cart triggers</strong> based on your free shipping threshold value.",
        "type": "warning",
      },
    },
    "message": {
      "banner": {
        "content": "You can customise the product cards based on your Shopify product catalogue. We suggest to select small/accessory items.",
        "type": "info",
      },
    },
  },
  "toolbarConfiguration": {
    "PRODUCTPICKER": {
      "tooltipContent": "Add up to 5 product cards",
    },
  },
}
`;

exports[`CampaignTemplates get template configuration 17`] = `
{
  "message_html": "<div>Need help with <strong>last-minute purchase</strong>? Leave us a message or check out our guide on <strong>custom express orders</strong> 🚚</div><div><br></div><div>We&#x27;ll be back at <strong>9AM tomorrow</strong> for you. </div>",
  "message_text": "Need help with last-minute purchase? Leave us a message or check out our guide on custom express orders 🚚

We'll be back at 9AM tomorrow for you. ",
  "name": "Link valuable resources to help visitors while your team is offline",
  "status": "inactive",
  "template_id": "link-valuable-resource-to-help-visitors",
  "trigger_rule": "{ulid-generated-id} && {ulid-generated-id}",
  "triggers": [
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "business_hours",
      "value": "outside",
    },
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "session_time",
      "value": 15,
    },
  ],
}
`;

exports[`CampaignTemplates get template configuration 18`] = `
{
  "defaultStepOpened": "message",
  "stepConfiguration": {
    "message": {
      "banner": {
        "content": "Before activating the campaign, <strong>add the URL of a relevant resource</strong> in your message.",
        "type": "warning",
      },
    },
  },
  "toolbarConfiguration": {
    "LINK": {
      "tooltipContent": "Add links",
    },
  },
}
`;

exports[`CampaignTemplates get template configuration 19`] = `
{
  "message_html": "<div>🔍 I can help you<strong> find the best fit for you</strong>! What are you looking for?</div>",
  "message_text": "🔍 I can help you find the best fit for you! What are you looking for?",
  "name": "Drive conversations with your visitors to find the right product",
  "status": "inactive",
  "template_id": "offer-chat-with-team-to-find-best-fit",
  "trigger_rule": "{ulid-generated-id} && {ulid-generated-id}",
  "triggers": [
    {
      "id": "ulid-generated-id",
      "operator": "contains",
      "type": "current_url",
      "value": "products",
    },
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "time_spent_on_page",
      "value": 15,
    },
  ],
}
`;

exports[`CampaignTemplates get template configuration 20`] = `
{
  "defaultStepOpened": "message",
}
`;

exports[`CampaignTemplates get template configuration 21`] = `
{
  "message_html": "<div>🍀 You&#x27;re lucky today: <strong>10% off</strong> on your order over $150, with <strong>code <a data-discount-code="FORYOU10" href="https://shopify.myshopify.com/discount/FORYOU10" target="_blank" rel="noreferrer">FORYOU10</a> </strong></div>",
  "message_text": "🍀 You're lucky today: 10% off on your order over $150, with code FORYOU10",
  "meta": {
    "delay": 15000,
    "noReply": true,
  },
  "name": "Offer 10% discount for visitors with high-value carts",
  "status": "inactive",
  "template_id": "offer-discount-for-high-value-cart",
  "trigger_rule": "{ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id}",
  "triggers": [
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "cart_value",
      "value": 100,
    },
    {
      "id": "ulid-generated-id",
      "operator": "lt",
      "type": "cart_value",
      "value": 150,
    },
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "session_time",
      "value": 15,
    },
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "business_hours",
      "value": "anytime",
    },
  ],
}
`;

exports[`CampaignTemplates get template configuration 22`] = `
{
  "defaultStepOpened": "audience",
  "stepConfiguration": {
    "audience": {
      "banner": {
        "content": "You can <strong>update the cart values of Amount Added To Cart triggers</strong> to target shoppers with high cart values, depending on your store average order value.",
        "type": "warning",
      },
    },
    "message": {
      "banner": {
        "content": "You can customize the discount code by using one of your existing one",
        "type": "info",
      },
    },
  },
  "toolbarConfiguration": {
    "DISCOUNTCODE": {
      "tooltipContent": "Select your own Shopify discount code",
    },
  },
}
`;

exports[`CampaignTemplates get template configuration 23`] = `
{
  "message_html": "<div>👋 Do you have any questions? <em>I&#x27;m online </em>and <strong>ready to help you</strong> 🙂</div>",
  "message_text": "👋 Do you have any questions? I'm online and ready to help you 🙂",
  "name": "Offer help to save the high-value carts",
  "status": "inactive",
  "template_id": "offer-help-on-cart-abandonment",
  "trigger_rule": "{ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id}",
  "triggers": [
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "business_hours",
      "value": "during",
    },
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "session_time",
      "value": 10,
    },
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "cart_value",
      "value": 100,
    },
  ],
}
`;

exports[`CampaignTemplates get template configuration 24`] = `
{
  "attachments": [
    {
      "contentType": "application/productCard",
      "extra": {
        "compare_at_price": 14.99,
        "currency": "EUR",
        "price": 9.99,
        "product_id": 1,
        "product_link": "https://shopify.myshopify.com/products/",
      },
      "name": "Product 1",
      "size": 0,
      "url": "src",
    },
  ],
  "message_html": "<div>You&#x27;ve got great taste! Check out <strong>our fan-favorite selection</strong> 😍</div>",
  "message_text": "You've got great taste! Check out our fan-favorite selection 😍",
  "meta": {
    "noReply": true,
  },
  "name": "Showcase products to cross-sell",
  "status": "inactive",
  "template_id": "product-card-showcase",
  "trigger_rule": "{ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id}",
  "triggers": [
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "business_hours",
      "value": "anytime",
    },
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "session_time",
      "value": 15,
    },
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "cart_value",
      "value": 50,
    },
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "device_type",
      "value": "desktop",
    },
  ],
}
`;

exports[`CampaignTemplates get template configuration 25`] = `
{
  "defaultStepOpened": "message",
  "toolbarConfiguration": {
    "PRODUCTPICKER": {
      "tooltipContent": "Add up to 5 products",
    },
  },
}
`;

exports[`CampaignTemplates get template configuration 26`] = `
{
  "message_html": "<div><strong>JUST IN! </strong>✨ Check out our brand-new launch! </div>",
  "message_text": "JUST IN! ✨ Check out our brand-new launch! ",
  "meta": {
    "noReply": true,
  },
  "name": "Promote new product releases on collection pages",
  "status": "inactive",
  "template_id": "promote-new-produt-on-collection-pages",
  "trigger_rule": "{ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id}",
  "triggers": [
    {
      "id": "ulid-generated-id",
      "operator": "contains",
      "type": "current_url",
      "value": "/collections",
    },
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "time_spent_on_page",
      "value": 10,
    },
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "business_hours",
      "value": "anytime",
    },
  ],
}
`;

exports[`CampaignTemplates get template configuration 27`] = `
{
  "defaultStepOpened": "message",
  "stepConfiguration": {
    "message": {
      "banner": {
        "content": "Please <strong>select the new products</strong> you want to recommend from your Shopify catalog.",
        "type": "warning",
      },
    },
  },
  "toolbarConfiguration": {
    "PRODUCTPICKER": {
      "tooltipContent": "Add up to 5 product cards",
    },
  },
}
`;

exports[`CampaignTemplates get template configuration 28`] = `
{
  "message_html": "<div>🌟 Save <strong>10% OFF</strong> your order when you <strong>subscribe to our newsletter</strong> or <strong>our SMS alerts!</strong></div><div><br></div>",
  "message_text": "🌟 Save 10% OFF your order when you subscribe to our newsletter or our SMS alerts!",
  "meta": {
    "noReply": true,
  },
  "name": "Promote newsletter sign-up for new visitors about to leave",
  "status": "inactive",
  "template_id": "promote-newsletter-for-new-visitors",
  "trigger_rule": "{ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id}",
  "triggers": [
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "session_time",
      "value": 10,
    },
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "time_spent_on_page",
      "value": 5,
    },
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "exit_intent",
      "value": "true",
    },
    {
      "id": "ulid-generated-id",
      "operator": "lt",
      "type": "visit_count",
      "value": 4,
    },
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "business_hours",
      "value": "anytime",
    },
  ],
}
`;

exports[`CampaignTemplates get template configuration 29`] = `
{
  "defaultStepOpened": "message",
  "stepConfiguration": {
    "message": {
      "banner": {
        "content": "Before activating the campaign, <strong>add the correct URL links to your newsletter/SMS sign-up pages</strong> in your message.",
        "type": "warning",
      },
    },
  },
  "toolbarConfiguration": {
    "LINK": {
      "tooltipContent": "Add sign-up links",
    },
  },
}
`;

exports[`CampaignTemplates get template configuration 30`] = `
{
  "message_html": "<div>💡 Not sure which style to choose?</div><div><br></div><div><strong>Take our quiz</strong> or chat with our leather artisans now! 👇</div>",
  "message_text": "💡 Not sure which style to choose?

Take our quiz or chat with our leather artisans now! 👇",
  "name": "Promote educational content that help visitors choose their products",
  "status": "inactive",
  "template_id": "promote-quizzes-to-help-choose-products",
  "trigger_rule": "{ulid-generated-id} && {ulid-generated-id}",
  "triggers": [
    {
      "id": "ulid-generated-id",
      "operator": "lt",
      "type": "visit_count",
      "value": 4,
    },
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "time_spent_on_page",
      "value": 15,
    },
  ],
}
`;

exports[`CampaignTemplates get template configuration 31`] = `
{
  "defaultStepOpened": "message",
  "stepConfiguration": {
    "message": {
      "banner": {
        "content": "Before activating the campaign, <strong>add the correct URL link to your quizz</strong> in your message.",
        "type": "warning",
      },
    },
  },
  "toolbarConfiguration": {
    "LINK": {
      "tooltipContent": "Add quizz link",
    },
  },
}
`;

exports[`CampaignTemplates get template configuration 32`] = `
{
  "message_html": "<div>Before you go, check out our <strong>latest items on sale for up to 30% OFF!</strong>💸</div>",
  "message_text": "Before you go, check out our latest items on sale for up to 30% OFF!💸",
  "meta": {
    "noReply": true,
  },
  "name": "Promote your sale collection for visitors about to leave",
  "status": "inactive",
  "template_id": "promote-sale-collection-for-visitors-about-to-leave",
  "trigger_rule": "{ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id}",
  "triggers": [
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "session_time",
      "value": 10,
    },
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "time_spent_on_page",
      "value": 5,
    },
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "exit_intent",
      "value": "true",
    },
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "visit_count",
      "value": 3,
    },
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "business_hours",
      "value": "anytime",
    },
  ],
}
`;

exports[`CampaignTemplates get template configuration 33`] = `
{
  "defaultStepOpened": "message",
  "stepConfiguration": {
    "message": {
      "banner": {
        "content": "Before activating the campaign, <strong>add the correct URL link to your sale collection page</strong> in your message.",
        "type": "warning",
      },
    },
  },
  "toolbarConfiguration": {
    "LINK": {
      "tooltipContent": "Add sale collection link",
    },
  },
}
`;

exports[`CampaignTemplates get template configuration 34`] = `
{
  "message_html": "<div>👉 <strong>Limited time offer</strong> — all under $99! </div><div><em>Pss: 5% extra discount with code <strong><a data-discount-code="SAVE5" href="https://shopify.myshopify.com/discount/SAVE5" target="_blank" rel="noreferrer">SAVE5</a> </strong>💸</em></div>",
  "message_text": "👉 Limited time offer — all under $99! 
Pss: 5% extra discount with code SAVE5 💸",
  "meta": {
    "noReply": true,
  },
  "name": "Schedule limited time offer for liquidated items",
  "status": "inactive",
  "template_id": "schedule-limited-time-offer",
  "trigger_rule": "{ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id}",
  "triggers": [
    {
      "id": "ulid-generated-id",
      "operator": "contains",
      "type": "current_url",
      "value": "/collections",
    },
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "time_spent_on_page",
      "value": 10,
    },
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "business_hours",
      "value": "anytime",
    },
  ],
}
`;

exports[`CampaignTemplates get template configuration 35`] = `
{
  "defaultStepOpened": "message",
  "stepConfiguration": {
    "message": {
      "banner": {
        "content": "Please <strong>remove or update the discount code</strong> to apply it only to your sales items.",
        "type": "warning",
      },
    },
  },
  "toolbarConfiguration": {
    "DISCOUNTCODE": {
      "tooltipContent": "Select your own Shopify discount code",
    },
  },
}
`;

exports[`CampaignTemplates get template configuration 36`] = `
{
  "message_html": "<div> 👋 Interested in this item? Check out our bundle, and<strong> save $10 </strong>😍</div>",
  "message_text": " 👋 Interested in this item? Check out our bundle, and save $10 😍",
  "meta": {
    "delay": 5000,
    "noReply": true,
  },
  "name": "Suggest bundles when a single item is in cart",
  "status": "inactive",
  "template_id": "suggest-bundles-when-single-item",
  "trigger_rule": "{ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id}",
  "triggers": [
    {
      "id": "ulid-generated-id",
      "operator": "containsAny",
      "type": "product_tags",
      "value": "INSERTYOURTAG",
    },
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "session_time",
      "value": 10,
    },
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "time_spent_on_page",
      "value": 5,
    },
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "business_hours",
      "value": "anytime",
    },
  ],
}
`;

exports[`CampaignTemplates get template configuration 37`] = `
{
  "defaultStepOpened": "audience",
  "stepConfiguration": {
    "audience": {
      "banner": {
        "content": "To target shoppers with a certain item in cart, <strong>please insert one of the Shopify product tag</strong> of the item to identify it.",
        "type": "warning",
      },
    },
    "message": {
      "banner": {
        "content": "Please <strong>select the bundle</strong> you want to recommend from your Shopify catalog.",
        "type": "info",
      },
    },
  },
  "toolbarConfiguration": {
    "PRODUCTPICKER": {
      "tooltipContent": "Select the bundle product",
    },
  },
}
`;

exports[`CampaignTemplates get template configuration 38`] = `
{
  "message_html": "<div>This one is sold out, but we have<strong> similar styles ready for you </strong>✨</div>",
  "message_text": "This one is sold out, but we have similar styles ready for you ✨",
  "meta": {
    "noReply": true,
  },
  "name": "Suggest similar items for sold-out or back-ordered items",
  "status": "inactive",
  "template_id": "suggest-similar-products-for-sold-out",
  "trigger_rule": "{ulid-generated-id} && {ulid-generated-id} && {ulid-generated-id}",
  "triggers": [
    {
      "id": "ulid-generated-id",
      "operator": "contains",
      "type": "current_url",
      "value": "/products/ADDYOURURL",
    },
    {
      "id": "ulid-generated-id",
      "operator": "gt",
      "type": "time_spent_on_page",
      "value": 5,
    },
    {
      "id": "ulid-generated-id",
      "operator": "eq",
      "type": "business_hours",
      "value": "anytime",
    },
  ],
}
`;

exports[`CampaignTemplates get template configuration 39`] = `
{
  "defaultStepOpened": "audience",
  "stepConfiguration": {
    "audience": {
      "banner": {
        "content": "Please <strong>update the URL trigger</strong> to target visitors on the product page of an out-of-stock product",
        "type": "warning",
      },
    },
    "message": {
      "banner": {
        "content": "Please <strong>select the similar products</strong> you want to recommend from your Shopify catalog.",
        "type": "info",
      },
    },
  },
  "toolbarConfiguration": {
    "PRODUCTPICKER": {
      "tooltipContent": "Add up to 5 product cards",
    },
  },
}
`;
